Agregar validación y pruebas exhaustivas para el módulo de usuario
Introduce la validación a nivel de campo en la entidad Usuario y mejora el manejo de errores de registro en UserController. Actualiza la configuración de CORS y seguridad, optimiza las consultas al repositorio y añade comprobaciones de actualizaciones de contraseñas. Incorpora la configuración de la base de datos de prueba H2 y pruebas unitarias y de controlador exhaustivas para usuarios y roles, garantizando así la fiabilidad y la corrección.